Bug 1956292 - Port bug 1898096: Replace color settings with "contrast control". r=aleca
Differential Revision: https://phabricator.services.mozilla.com/D242990

--HG--
extra : moz-landing-system : lando

--- a/mail/themes/shared/mail/preferences/preferences.css
+++ b/mail/themes/shared/mail/preferences/preferences.css
@@ -444,6 +444,10 @@ treechildren::-moz-tree-cell-text(selected) {
   white-space: nowrap;
 }
 
+.accessory-button {
+  min-width: 150px;
+}
+
 #tagList {
   height: 180px;
 }
